ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-12-02 Daniel Andreca
	- GUI:
		* Add support for alias subdomain mail (part I)
	- ENGINE
		* Fixed #1518: Virtual mail problem

2008-12-01 Benedikt Heintel
	- ENGINE:
		* Fixed #1540: auto-reply: wrong character encoding

2008-11-28 Daniel Andreca
	- GUI:
		* Add default user with password to statistics
		* Fix regresion introduced on r1408
	- TEMPLATES
		* On protected_user_manage.php the size of the edit-icon (edit.png) is 18 pixels instead of 16

2008-11-27 Daniel Andreca
	- LANGUAGES:
		* Fixed #1568: Translations have to be updated because of changed URLs

2008-11-27 Benedikt Heintel
	- DISTS:
		* Fixed: (Fedora) rkhunter and chkrootkit getting not installed

2008-11-27 Daniel Andreca
	- ENGINE:
		* Fixed #837: AWStats password protection

2008-11-23 Daniel Andreca
	- CONFIGS:
		* Fixed #1567: message_size_limit is set twice
		* Fixed #1531: [Bind] Domain settings are not conformed to Denic registry policy

2008-11-22 Daniel Andreca
	- TOOLS:
		* Updated plugins for SquirrelMail

2008-11-21 Benedikt Heintel
	- TOOLS:
		* Updated SquirrelMail to version 1.4.16
		* Updated phpMyAdmin to version 3.0.1.1

2008-11-19 Daniel Andreca
	- GUI:
		* Fixed #1557: Error -> Duplicate entry 'xxxxx' for key 1 while logging into ISPCP

2008-11-18 Daniel Andreca
	- ENGINE:
		* Log files for alias subdomains are not copied in owner folder

2008-11-14 Daniel Andreca
	- CONFIGS:
		* Fixed #1565: Some issues on CentOS 5.2

2008-11-09 Daniel Andreca
	- CONFIGS:
		* Fixed #1283: FTP Wrong password
	- GUI:
		* Maintenance mode automatically on if any update is available

2008-11-04 Daniel Andreca
	- GUI:
		* Reseller with disabled resources (disabled email) cannot be edited (with same resouces remaining disabled)

2008-11-02 Benedikt Heintel
	- LANGUAGES:
		* Updated: Italian

2008-10-30 Daniel Andreca
	- GUI:
		* Fixed #1536: CentOS - ISPCP fails to install

2008-10-25 Daniel Andreca
	- GUI: