@@ -411,6 +411,7 @@ SQL_QUERY;
 $exec_count = count_requests($sql, 'domain_status', 'domain');
 $exec_count = $exec_count + count_requests($sql, 'alias_status', 'domain_aliasses');
 $exec_count = $exec_count + count_requests($sql, 'subdomain_status', 'subdomain');
+$exec_count = $exec_count + count_requests($sql, 'subdomain_alias_status', 'subdomain_alias');
 $exec_count = $exec_count + count_requests($sql, 'status', 'mail_users');
 $exec_count = $exec_count + count_requests($sql, 'status', 'htaccess');
 $exec_count = $exec_count + count_requests($sql, 'status', 'htaccess_groups');
