@@ -47,14 +47,14 @@ SQL_QUERY;
   }
 
   // check for mail accounts
-  /*$query = "select count(mail_id) as cnt from mail_users WHERE (mail_type = 'subdom_mail' OR mail_type = 'subdom_forward') AND sub_id = ?";
+  $query = "select count(mail_id) as cnt from mail_users WHERE (mail_type LIKE '".MT_ALSSUB_MAIL."%' OR mail_type = '".MT_ALSSUB_FORWARD."') AND sub_id = ?";
   $rs = exec_query($sql, $query, array($sub_id));
 
   if ($rs -> fields['cnt'] > 0 ) {
     set_page_message(tr('Subdomain you are trying to remove has email accounts !<br>First remove them!'));
     header('Location: domains_manage.php');
     exit(0);
-  }*/
+  }
 
   check_for_lock_file();
 
