@@ -418,72 +418,6 @@ function chk_mountp($data, $num = 50) {
 	return true;
 }
 
-/* return mail for a a id */
-function trans_mailid_to_mail(&$sql, $mailid) {
-	$query = <<<SQL_QUERY
-
-	select *
-		from
-			mail_users
-		where
-			mail_id = ?
-		limit 1
-SQL_QUERY;
-
-	$res = exec_query($sql, $query, array($mailid));
-
-	if ($res->RowCount() == 1) {
-		$data = $res->FetchRow();
-		$mail_type = $data['mail_type'];
-
-		if ($mail_type === 'normal_mail') {
-			$local_part = $data['mail_acc'];
-			$domain_query = "select domain_name from domain as t1, mail_users as t2  where t2.domain_id=t1.domain_id and t2.mail_id = ?";
-			$res = exec_query($sql, $domain_query, array($mailid));
-			$domain_name = $res->fields['domain_name'];
-
-			return $local_part . "@" . $domain_name;
-		} else if ($mail_type === 'normal_forward') {
-			$local_part = $data['mail_acc'];
-			$domain_query = "select domain_name from domain as t1, mail_users as t2  where t2.domain_id=t1.domain_id and t2.mail_id = ?";
-			$res = exec_query($sql, $domain_query, array($mailid));
-			$domain_name = $res->fields['domain_name'];
-
-			return $local_part . "@" . $domain_name;
-		} else if ($mail_type === 'alias_mail') {
-			$local_part = $data['mail_acc'];
-			$domain_query = "select alias_name from domain as t1, mail_users as t2, domain_aliasses as t3  where t2.domain_id=t1.domain_id and t3.alias_id = t2.sub_id and t2.mail_id = ?";
-			$res = exec_query($sql, $domain_query, array($mailid));
-			$domain_name = $res->fields['alias_name'];
-
-			return $local_part . "@" . $domain_name;
-		} else if ($mail_type === 'alias_forward') {
-			$local_part = $data['mail_acc'];
-			$domain_query = "select alias_name from domain as t1, mail_users as t2, domain_aliases as t3  where t2.domain_id=t1.domain_id and t3.alias_id = t2.sub_id and t2.mail_id = ?";
-			$res = exec_query($sql, $domain_query, array($mailid));
-			$domain_name = $res->fields['alias'];
-
-			return $local_part . "@" . $domain_name;
-		} else if ($mail_type === 'subdom_mail') {
-			$local_part = $data['mail_acc'];
-			$domain_query = "select subdomain_name from domain as t1, mail_users as t2, subdomain as t3  where t2.domain_id=t1.domain_id and t3.subdomain_id = t2.sub_id and t2.mail_id = ?";
-		} else if ($mail_type === 'subdom_forward') {
-			$local_part = $data['mail_acc'];
-			$domain_query = "select subdomain_name from domain as t1, mail_users as t2, subdomain as t3  where t2.domain_id=t1.domain_id and t3.subdomain_id = t2.sub_id and t2.mail_id = ?";
-			$res = exec_query($sql, $domain_query, array($mailid));
-			$domain_name = $res->fields['subdomain_name'];
-
-			return $local_part . "@" . $domain_name;
-		} else if ($mail_type === 'normal_catchall') {
-			return tr('Catchall account');
-		} else if ($mail_type === 'alias_catchall') {
-			return tr('Catchall account');
-		} else {
-			return tr('Unknown type');
-		}
-	}
-}
-
 function get_post($value) {
 	if (array_key_exists($value, $_POST))
 		return $_POST[$value];
